correção de pequenso bugs no php e no html, no php havia casos de depprops que eram ignorados

--- a/Web/partials/deep.html
+++ b/Web/partials/deep.html
@@ -142,6 +142,13 @@
 				</div>
 			</div>
 		</div>
+		<div class="row">
+			<div class = "showmoreOptionButtons"> 
+          		<button type="button" class="btn btn-link" ng-click="gotoHomePage()">
+            	 Nova Pesquisa
+         		</button>
+         	</div>
+        </div>
 	</div>
 </div>
 
@@ -208,25 +215,26 @@
 					</table>
 				</div>
 			</div>
-		</div>
-		<div id="waitForConcordance"class = "waitFor">
-			<div class ="content">  
-				<div class = "waitText">
-				A processar ...
-				</div>
-				<div class="sk-circle">
-					<div class="sk-circle1 sk-child"></div>
-					<div class="sk-circle2 sk-child"></div>
-					<div class="sk-circle3 sk-child"></div>
-					<div class="sk-circle4 sk-child"></div>
-					<div class="sk-circle5 sk-child"></div>
-					<div class="sk-circle6 sk-child"></div>
-					<div class="sk-circle7 sk-child"></div>
-					<div class="sk-circle8 sk-child"></div>
-					<div class="sk-circle9 sk-child"></div>
-					<div class="sk-circle10 sk-child"></div>
-					<div class="sk-circle11 sk-child"></div>
-					<div class="sk-circle12 sk-child"></div>
+		
+			<div id="waitForConcordance"class = "waitFor">
+				<div class ="content">  
+					<div class = "waitText">
+					A processar ...
+					</div>
+					<div class="sk-circle">
+						<div class="sk-circle1 sk-child"></div>
+						<div class="sk-circle2 sk-child"></div>
+						<div class="sk-circle3 sk-child"></div>
+						<div class="sk-circle4 sk-child"></div>
+						<div class="sk-circle5 sk-child"></div>
+						<div class="sk-circle6 sk-child"></div>
+						<div class="sk-circle7 sk-child"></div>
+						<div class="sk-circle8 sk-child"></div>
+						<div class="sk-circle9 sk-child"></div>
+						<div class="sk-circle10 sk-child"></div>
+						<div class="sk-circle11 sk-child"></div>
+						<div class="sk-circle12 sk-child"></div>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -234,81 +242,6 @@
 </div>
 <!--end Modal -->
 
-<div class = "deepword"> 
-  <div class="jumbotron">
-    <div class="container">
-      <label for="palavra">Introduzir palavra</label>
-      <div class="input-group">
-        <input type="text" class="form-control" placeholder="Palavra" ng-model="word">
-        <span class="input-group-btn">
-          <button type="button" class="buttonMiddle btn btn-default dropdown-toggle" data-toggle="dropdown" style= "width: 94px;">
-            {{pos}}
-            <span class="caret"></span>
-            <!--<span class="sr-only">Toggle Dropdown</span>-->
-          </button>
-          <ul class="dropdown-menu" role="menu">
-            <li ng-repeat="x in classes" ng-click="changePos(x)">
-              <a  href=""> {{ x }} </a>
-            </li>
-          </ul>
-        </span>
-        <span class="input-group-btn">
-
-          <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" style= "width: 125px;">
-            {{measure}}
-            <span class="caret"></span>
-            <!--<span class="sr-only">Toggle Dropdown</span>-->
-          </button>
-          <ul class="dropdown-menu" role="menu">
-            <li ng-repeat="x in measures" ng-click="changeMeasure(x)">
-              <a  href=""> {{ x }} </a>
-            </li>
-          </ul>
-        </span>
-      </div>
-      <div class = "moreOptions">
-        <table style="width:100%">
-          <tr>
-            <td>
-              <label class="control-label">Frequência mínima: </label>
-            </td>
-            <td>
-              <div class="inputNumber">
-                <input type="number" class="form-control" ng-model="minfreq">
-              </div>
-            </td> 
-          </tr>
-          <tr>
-            <td>
-              <label class="control-label">Número máximo de palavras:</label>
-            </td>
-            <td>
-              <div class="inputNumber">
-                <input type="number" class="form-control" ng-model="maxword">
-              </div>
-            </td> 
-          </tr>
-        </table>
-      </div>
-      <div class = "showmoreOptionButtons"> 
-        <div class="row">
-          <button type="button" class="btn btn-link" ng-click="moreOptions()">
-            Mais Opções
-          </button>
-          <button class="btn btn-default" type="submit" value="Mostrar" ng-click="searchWord()">Mostrar</button>
-        </div>
-      </div>
-      <div class = "showlessOptionButtons"> 
-        <div class="row">
-          <button type="button" class="btn btn-link" ng-click="lessOptions()">
-            Esconder Opções
-          </button>
-          <button class="btn btn-default" type="submit" value="Mostrar" ng-click="searchWord()">Mostrar</button>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
 <div class = "waitFor" id ="waitForWord">
 	<div class ="content">  
 		<div class = "waitText">
