--- a/Web/partials/home.html
+++ b/Web/partials/home.html
@@ -1,7 +1,7 @@
 <div class = "deepword"> 
   <div class="jumbotron">
     <div class="container">
-      <label for="palavra">Introduzir palavra</label>
+      <label for="palavra">Introduzir o lema da palavra</label>
       <div class="input-group">
         <input type="text" class="form-control" placeholder="Palavra" ng-model="word">
         <span class="input-group-btn">
