--- a/Web/partials/home.html
+++ b/Web/partials/home.html
@@ -3,7 +3,7 @@
     <div class="container">
       <label for="palavra">Introduzir o lema da palavra</label>
       <div class="input-group">
-        <input type="text" class="form-control" placeholder="Palavra" ng-model="word">
+        <input type="text" class="form-control" placeholder="Lema" ng-model="word">
         <span class="input-group-btn">
           <button type="button" class="buttonMiddle btn btn-default dropdown-toggle" data-toggle="dropdown" style= "width: 94px;">
             {{pos}}
