--- a/Web/partials/deep.html
+++ b/Web/partials/deep.html
@@ -170,34 +170,34 @@
 					</div>
 				</div>
 				<div class = "row">
-					<div class = "col-md-4">
+					<div class = "col-xs-4">
 						<label>Palavra Alvo:</label>
 					</div>
-					<div class = "col-md-6">
+					<div class = "col-xs-6">
 						<p>{{word}} ({{pos}})</p>
 					</div>
 				</div>
 				<div class = "row">
-					<div class = "col-md-4">
+					<div class = "col-xs-4">
 						<label>Palavra Co-ocorrente:</label>
 					</div>
-					<div class = "col-md-6">
+					<div class = "col-xs-6">
 						<p>{{otherWord}} ({{pos_otherWord}})</p>
 					</div>
 				</div>
 				<div class = "row">
-					<div class = "col-md-4">
+					<div class = "col-xs-4">
 						<label>{{measure}}:</label>
 					</div>
-					<div class = "col-md-6">
+					<div class = "col-xs-6">
 						<p>{{m_value}}</p>
 					</div>
 				</div>
 				<div class = "row">
-					<div class = "col-md-4">
+					<div class = "col-xs-4">
 						<label>Frequência:</label>
 					</div>
-					<div class = "col-md-6">
+					<div class = "col-xs-6">
 						<p>{{frequency}} ({{logfrequency}})</p>
 					</div>
 				</div>
