--- a/Web/partials/deep.html
+++ b/Web/partials/deep.html
@@ -136,6 +136,9 @@
 				</div>
 			</div>
 		</div>
+		<div class="row" id = "ADV_EXTRA">					
+          	<h4> <span class="label label-white"> este advérbio modifica {{top_count}} frase(s). </span></h4>
+        </div>
 		<div class="row">
 			<div class = "newSearchButton"> 
           		<button type="button" class="btn btn-link" ng-click="gotoHomePage()">
