--- a/Web/partials/deep_result.html
+++ b/Web/partials/deep_result.html
@@ -1,4 +1,4 @@
-<div class="jumbotron jumbotron_deep">
+<div class="jumbotron" id="jumbotron_deep">
 	<div class="container">
 		<div class="wordTitle">
 			<h3>
@@ -139,13 +139,6 @@
 		<div class="row" id = "ADV_EXTRA">					
           	<h4> <span class="label label-white"> este advérbio modifica {{top_count}} frase(s). </span></h4>
         </div>
-		<div class="row">
-			<div class = "newSearchButton"> 
-          		<button type="button" class="btn btn-link" ng-click="gotoHomePage()">
-            	 Nova Pesquisa
-         		</button>
-         	</div>
-        </div>
 	</div>
 </div>
 
@@ -159,10 +152,10 @@
 			</div>
 			<div class="modal-body">
 				<div class = "row">
-					<div class = "col-md-4">
+					<div class = "col-xs-4">
 						<label>Relação:</label>
 					</div>
-					<div class = "col-md-7">
+					<div class = "col-xs-6">
 						{{depTitle}}
 					</div>
 				</div>
@@ -239,7 +232,7 @@
 </div>
 <!--end Modal -->
 
-<div class = "waitFor" id ="waitForWord">
+<!--<div class = "waitFor" id ="waitForWord">
 	<div class ="content">  
 		<div class = "waitText">
 			A processar ...
@@ -265,3 +258,4 @@
 		</div>
 	</div>
 </div>
+-->
