--- a/Web/partials/deep_result.html
+++ b/Web/partials/deep_result.html
@@ -10,7 +10,7 @@
 		<div class="measureTitle">
 			<h4>
 				<span class="label label-default label_measures">
-					Medida:  
+					Measure:  
 				</span>
 			</h4>
 			<div class="dropdown">
@@ -37,7 +37,7 @@
 									<tr class="warning" >
 										<td>
 											<span ng-repeat="y in x.data">
-												<a ng-click="loadWordExample(x,y,'PRE_VERB')" href="javascript:void(0);">
+												<a ng-click="loadCoocorrenceExample(x,y,'PRE_VERB')" href="javascript:void(0);">
 													<b>{{y.word}}</b>
 												</a> 
 												({{y.duallog}}:{{y.measure}})
@@ -60,7 +60,7 @@
 									<tr class="warning" >
 										<td>
 											<span ng-repeat="y in x.data">
-												<a ng-click="loadWordExample(x,y,'POST_VERB')" href="javascript:void(0);">
+												<a ng-click="loadCoocorrenceExample(x,y,'POST_VERB')" href="javascript:void(0);">
 													<b>{{y.word}}</b>
 												</a> 
 												({{y.duallog}}:{{y.measure}})
@@ -91,7 +91,7 @@
 								<tr class="warning" >
 									<td>
 										<span ng-repeat="y in x.data">
-											<a ng-click="loadWordExample(x,y,'PRE_WORD')" href="javascript:void(0);">
+											<a ng-click="loadCoocorrenceExample(x,y,'PRE_WORD')" href="javascript:void(0);">
 												<b>{{y.word}}</b>
 											</a> 
 											({{y.duallog}}:{{y.measure}})
@@ -119,7 +119,7 @@
 								<tr class="warning" >
 									<td>
 										<span ng-repeat="y in x.data">
-											<a ng-click="loadWordExample(x,y,'POST_WORD')" href="javascript:void(0);">
+											<a ng-click="loadCoocorrenceExample(x,y,'POST_WORD')" href="javascript:void(0);">
 												<b>{{y.word}}</b>
 											</a> 
 											({{y.duallog}}:{{y.measure}})
@@ -137,7 +137,7 @@
 			</div>
 		</div>
 		<div class="row" id = "ADV_EXTRA">					
-          	<h4> <span class="label label-white"> este advérbio modifica {{top_count}} frase(s). </span></h4>
+          	<h4> <span class="label label-white"> This adverb modifies {{top_count}} sentence(s). </span></h4>
         </div>
 	</div>
 </div>
@@ -153,7 +153,7 @@
 			<div class="modal-body">
 				<div class = "row">
 					<div class = "col-xs-4">
-						<label>Relação:</label>
+						<label>Relation:</label>
 					</div>
 					<div class = "col-xs-6">
 						{{depTitle}}
@@ -161,7 +161,7 @@
 				</div>
 				<div class = "row">
 					<div class = "col-xs-4">
-						<label>Palavra Alvo:</label>
+						<label>Target Word:</label>
 					</div>
 					<div class = "col-xs-6">
 						<p>{{word}} ({{pos}})</p>
@@ -169,7 +169,7 @@
 				</div>
 				<div class = "row">
 					<div class = "col-xs-4">
-						<label>Palavra Co-ocorrente:</label>
+						<label>Cooccurent Word:</label>
 					</div>
 					<div class = "col-xs-6">
 						<p>{{otherWord}} ({{pos_otherWord}})</p>
@@ -185,14 +185,14 @@
 				</div>
 				<div class = "row">
 					<div class = "col-xs-4">
-						<label>Frequência:</label>
+						<label>Frequency:</label>
 					</div>
 					<div class = "col-xs-6">
 						<p>{{frequency}} ({{logfrequency}})</p>
 					</div>
 				</div>
 				<div class = "concordance">
-					<label> Frases de exemplo: </label>
+					<label> Example Sentences: </label>
 					<table class="table table-striped">
 						<tr ng-repeat="x in sentences">
 							<td>
@@ -209,7 +209,7 @@
 			<div id="waitForConcordance"class = "waitFor">
 				<div class ="content">  
 					<div class = "waitText">
-					A processar ...
+					Searching...
 					</div>
 					<div class="sk-circle">
 						<div class="sk-circle1 sk-child"></div>
@@ -231,31 +231,3 @@
 	</div>
 </div>
 <!--end Modal -->
-
-<!--<div class = "waitFor" id ="waitForWord">
-	<div class ="content">  
-		<div class = "waitText">
-			A processar ...
-		</div>
-		<div class="sk-circle">
-			<div class="sk-circle1 sk-child"></div>
-			<div class="sk-circle2 sk-child"></div>
-			<div class="sk-circle3 sk-child"></div>
-			<div class="sk-circle4 sk-child"></div>
-			<div class="sk-circle5 sk-child"></div>
-			<div class="sk-circle6 sk-child"></div>
-			<div class="sk-circle7 sk-child"></div>
-			<div class="sk-circle8 sk-child"></div>
-			<div class="sk-circle9 sk-child"></div>
-			<div class="sk-circle10 sk-child"></div>
-			<div class="sk-circle11 sk-child"></div>
-			<div class="sk-circle12 sk-child"></div>
-		</div>
-		<div class = "waitText">
-			<button type="button" class="btn btn-link" ng-click="reloadPage()">
-				Voltar ao início
-			</button>
-		</div>
-	</div>
-</div>
--->
