imagens adicionadas e acrescentada informação à página help

--- a/Web/styles/deepstring.css
+++ b/Web/styles/deepstring.css
@@ -197,6 +197,10 @@ font-size: 16px;
   margin-top: 10px;
   margin-bottom: 10px; 
 }
+.text_container >.image_text > img{
+  margin-right: auto;
+  margin-left: auto;
+}
 
 .text_container > .table_text{
   width: 60%;
