alterações no apsecto e na funcionalidade

--- a/Web/partials/about.html
+++ b/Web/partials/about.html
@@ -19,13 +19,13 @@
 	  		The XIP syntactic dependencies analysed in this project are:
 
 			<ul>
-	  			<li><strong>SUBJ</strong> dependency: links a verb and its subject;</li>
-	  			<li><strong>CDIR</strong> dependency: links a verb and its direct complement;</li>
-	  			<li><strong>CINDIR</strong>  dependency: links the verb with a prepositional phrase;</li>
-	  			<li><strong>MOD</strong>  dependency: links a modifier with the modified element;</li>
-	  			<li><strong>COMPL</strong>  dependency: links a predicate (verb, noun or adjective) to each of its essential complements;</li>
-	  			<li><strong>QUANTD</strong>  dependency: links a nominal head and a quantifier;</li>
-	  			<li><strong>CLASSD</strong>  dependency: links a nominal head and a nominal classifier.</li>
+	  			<li><strong>SUBJ</strong>: links a verb and its subject;</li>
+	  			<li><strong>CDIR</strong>: links a verb and its direct complement;</li>
+	  			<li><strong>CINDIR</strong>: links the verb with a prepositional phrase;</li>
+	  			<li><strong>MOD</strong>: links a modifier with the modified element;</li>
+	  			<li><strong>COMPL</strong>: links a predicate (verb, noun or adjective) to each of its essential complements;</li>
+	  			<li><strong>QUANTD</strong>: links a nominal head and a quantifier;</li>
+	  			<li><strong>CLASSD</strong>: links a nominal head and a nominal classifier.</li>
 			</ul>
 
 			A semantic dependency, Named Entity (NE), was also considered. This dependency delimits named entities and assigns them to several general categories. The categories used in this system are presented in the following table. 
